--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,13 +3,13 @@
         <h2>ngApp</h2>
     </div>
     <div class="header-links">
-        <a href="#">Home</a>
-        <a href="#">Counter</a>
-        <a href="#">Courses</a>
+        <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true }">Home</a>
+        <a routerLink="/counter" routerLinkActive="active">Counter</a>
+        <a routerLink="/courses" routerLinkActive="active">Courses</a>
     </div>
     <div class="header-auth-links">
-        <a href="#">Login</a>
-        <a href="#">Signup</a>
+        <a routerLink="#">Login</a>
+        <a routerLink="#">Signup</a>
         <button class="logout-button">
             LOGOUT
         </button>
