--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,1 +1,26 @@
-<p>courses works!</p>
+<div class="course-container">
+    <div class="courses-page-header">
+        <div class="course-header-text">
+            <h2>All Courses</h2>
+        </div>
+        <div class="course-header-search">
+            <input type="text" placeholder="Search Course">
+            <button>Search</button>
+        </div>
+        <div class="course-create">
+            <button class="create-course-button" (click)="showCreateForm()">
+                Create Course
+            </button>
+        </div>
+    </div>
+    <div class="course-list-container">
+        <ng-container *ngFor="let item of courses$ | async">
+            <app-course-card [course]="item">
+            </app-course-card>
+        </ng-container>
+    </div>
+</div>
+
+<div *ngIf="showForm$ | async">
+    <app-add-course></app-add-course>
+</div>
