--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -1,7 +1,7 @@
 <div class="app-counter-container">
     <div class="app-counter">
-        <app-counter-value [count]="counter"></app-counter-value>
-        <app-counter-button (incrementClicked)="incrementCounter()" (decrementClicked)="decrementCounter()"
-            (resetClicked)="resetCounter()"></app-counter-button>
+        <app-counter-value></app-counter-value>
+        <app-counter-button></app-counter-button>
+        <app-custom-input></app-custom-input>
     </div>
 </div>
