--- a/src/app/courses/add-course/add-course.component.html
+++ b/src/app/courses/add-course/add-course.component.html
@@ -2,40 +2,44 @@
     <div class="modal-content" id="modal-content">
         <span class="close" (click)="hideForm()">&times;</span>
         <div class="form-container">
-            <h2>Create New Course</h2>
-            <form class="course-form">
+            <h2>{{!editMode? 'Create' : 'Edit'}} Course</h2>
+            <form class="course-form" [formGroup]="courseForm" (ngSubmit)="onCreateOrUpdateCourse()">
                 <div class="form-field">
                     <label for="title">Title</label>
-                    <input type="text" placeholder="e.g., Introduction to Web Development">
+                    <input type="text" placeholder="e.g., Introduction to Web Development" formControlName="title">
                 </div>
+                <div class="validation-error">{{showTitleValidationError()}}</div>
 
                 <div class="form-field">
                     <label for="description">Description</label>
-                    <textarea rows="5" placeholder="Provide a detailed description of the course"></textarea>
+                    <textarea rows="5" formControlName="description"
+                        placeholder="Provide a detailed description of the course"></textarea>
                 </div>
+                <div class="validation-error">{{showDescriptionValidationError()}}</div>
 
                 <div class="form-field">
                     <label for="author">Author</label>
-                    <input type="text" placeholder="e.g., John Doe">
+                    <input type="text" formControlName="author" placeholder="e.g., John Doe">
                 </div>
+                <div class="validation-error">{{showAuthorValidationError()}}</div>
 
                 <div class="form-field">
                     <label for="price">Price</label>
-                    <input type="number" step="0.01" placeholder="e.g., 99.99">
+                    <input type="number" formControlName="price" step="0.01" placeholder="e.g., 99.99">
                 </div>
 
                 <div class="form-field file-upload-field">
                     <label for="image">Course Image</label>
                     <div class="file-input-wrapper">
-                        <input type="file" accept="image/*">
+                        <input type="file" accept="image/*" formControlName="image">
                         <button type="button" class="browse-button">Browse File</button>
                         <span class="file-name">No file chosen</span>
                     </div>
                 </div>
 
                 <div class="form-actions">
-                    <button type="submit" class="submit-button">Create Course</button>
-                    <button type="reset" class="cancel-button">Clear Form</button>
+                    <button type="submit" class="submit-button">{{!editMode? 'Create' : 'Edit'}}</button>
+                    <button type="reset" class="cancel-button" *ngIf="!editMode">Clear Form</button>
                 </div>
             </form>
         </div>
