--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,8 +8,8 @@
         <a routerLink="/courses" routerLinkActive="active">Courses</a>
     </div>
     <div class="header-auth-links">
-        <a routerLink="#">Login</a>
-        <a routerLink="#">Signup</a>
+        <a routerLink="/auth/login">Login</a>
+        <a routerLink="/auth/signup">Signup</a>
         <button class="logout-button">
             LOGOUT
         </button>
