--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+<div class="app-login">
+    <div class="login-container">
+        <form class="login-form" [formGroup]="loginForm" (ngSubmit)="onFormSubmit()">
+            <h2>Login Here</h2>
+            <div class="input-group">
+                <label for="email">Email</label>
+                <input type="email" placeholder="Enter your email" formControlName="email">
+                <div class="validation-error">{{vaidateEmail()}}</div>
+            </div>
+            <div class="input-group">
+                <label for="password">Password</label>
+                <input type="text" placeholder="Enter your password" formControlName="password">
+                <div class="validation-error">{{validatePassword()}}</div>
+            </div>
+            <button type="submit" class="login-button">
+                Login
+            </button>
+            <div class="signup-link">
+                Do not have an account?<a href="#">Signup Here</a>
+            </div>
+        </form>
+    </div>
+</div>
