--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
         </span>
         <span *ngIf="(loggedUser$ | async)">
             <a href="#">{{(loggedUser$ | async)?.email}}</a>
-            <button class="logout-button">
+            <button class="logout-button" (click)="onLogoutClicked()">
                 LOGOUT
             </button>
         </span>
