--- a/src/app/courses/course-details/course-details.component.html
+++ b/src/app/courses/course-details/course-details.component.html
@@ -1,1 +1,43 @@
-<p>course-details works!</p>
+<div *ngIf="!(selectedCourse$ | async)">
+    Can not show selected course details for selected coures
+</div>
+
+<div *ngIf="(selectedCourse$ | async)">
+    <div class="app-course-back">
+        <button (click)="onBackToCourses()">
+            <i class="fa fa-arrow-left" aria-hidden="true"></i>
+            Back to Courses
+        </button>
+    </div>
+    <div class="app-course-detail">
+        <div class="app-course-title">
+            {{(selectedCourse$ | async).title}}
+        </div>
+        <div>
+            <img src="./images/angular.jpg" width="100%" height="350px">
+        </div>
+        <div class="app-course-author-price">
+            <div class="app-course-author">{{(selectedCourse$ | async).author}}</div>
+            <div class="app-course-price">{{(selectedCourse$ | async).price}}</div>
+        </div>
+        <div class="app-course-description">
+            {{(selectedCourse$ | async).description}}
+        </div>
+        <div class="app-course-lessons">
+            <i class="fa fa-play-circle-o" aria-hidden="true"></i>
+            <span>Lesson 1: Introduction to Course</span>
+        </div>
+        <div class="app-course-lessons">
+            <i class="fa fa-play-circle-o" aria-hidden="true"></i>
+            <span>Lesson 2: How to navigate this Course</span>
+        </div>
+        <div class="app-course-lessons">
+            <i class="fa fa-play-circle-o" aria-hidden="true"></i>
+            <span>Lesson 3: Project Setup & Code Editor</span>
+        </div>
+        <div class="app-course-lessons">
+            <i class="fa fa-play-circle-o" aria-hidden="true"></i>
+            <span>Lesson 4: The "Hello, World" Project</span>
+        </div>
+    </div>
+</div>
